--- a/index.css
+++ b/index.css
@@ -132,7 +132,7 @@ ul.subheadings {
     display:inline-block;
 }
 
-.navclass li a.active{
+.navclass li a.active1{
     background-color: black;
 }
 hr{
