--- a/index.css
+++ b/index.css
@@ -39,16 +39,18 @@ hr {
 #table-of-contents {
     position: sticky;
     top: 0;
-    max-height: 100vh;
-    overflow-y: auto;
-    background-color: black; /* Black background */
-    color: white; /* White text */
+    height: 60vh;
+    background-color: black;
+    color: white;
     padding: 15px;
     width: 250px;
     float: left;
     margin-right: 20px;
-    border-radius: 8px; /* Slightly rounded edges */
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5); /* Subtle shadow for better visibility */
+    border-radius: 8px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    overflow-y: auto; 
+    background: linear-gradient(to bottom, saddlebrown 5%, black 20%, black 80%, saddlebrown 95%);
 }
 
 #table-of-contents h2 {
